private-hosting/spoolman/service-spoolman.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoolman
  namespace: spoolman
spec:
  selector: { app.kubernetes.io/name: spoolman }
  ports:
    - { name: http, port: 8000, targetPort: http }
